--- a/package.json
+++ b/package.json
@@ -3,12 +3,29 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
+    "tailwind:init": "tailwindcss init -p",
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.7.11"
+    "@astrojs/react": "^4.2.7",
+    "@fontsource-variable/saira": "^5.2.7",
+    "@tailwindcss/vite": "^4.1.5",
+    "astro": "^5.7.11",
+    "gsap": "^3.13.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "rehype-stringify": "^10.0.1",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.2",
+    "tailwindcss-animated": "^2.0.0",
+    "typewriter-effect": "^2.22.0",
+    "unified": "^11.0.5"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
+    "tailwindcss": "^4.1.5"
   }
 }
