--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    
+  "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@astrojs/react": "^4.2.7",
@@ -26,6 +28,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
+    "gh-pages": "^6.3.0",
     "tailwindcss": "^4.1.5"
   }
 }
